fix z-indexing with header/product rec nav

--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -32,7 +32,7 @@
   position: sticky;
   top: -2.75em; // actual value gets set by JS based on the height of the promo bar above
   width: 100%;
-  z-index: 101;
+  z-index: 1100;
   background: $true-white;
 
   &__skip-to-main {
